# quest3-g1-teleop

./: README.md
camera_torso/: package.xml  setup.cfg  setup.py
camera_torso/camera_torso/: cam_view.py
g1_mujoco_bridge/: package.xml
head/: package.xml  setup.cfg  setup.py
head/head/: head_mov.py
quest_head_teleop/: package.xml  setup.py
quest_head_teleop/quest_head_teleop/: combined_hand_wrist_calibration_recorder.py  hand_feature_debug.py
quest_head_teleop/scripts/: verify_hand_csv_replay_pipeline.py  verify_replayed_robot_actions.py
rviz_vis/: setup.cfg  setup.py
src/g1_mujoco_bridge/: setup.cfg  setup.py
src/g1_mujoco_bridge/g1_mujoco_bridge/: g1_ros2_bridge.py
src/quest_head_teleop/: setup.cfg
src/quest_head_teleop/quest_head_teleop/: both_arm_live_mapper.py  hand_axis_calibration_recorder.py  hand_calibration_csv_replay.py  head_pose_mapper.py  right_hand_live_mapper.py  wrist_orientation_calibration_recorder.py
src/quest_head_teleop/scripts/: analyze_hand_axis_calibration.py  analyze_wrist_orientation_calibration.py  verify_combined_replay_pipeline.py
src/rviz_vis/: package.xml
src/rviz_vis/rviz_vis/: head_rviz.py
vr_haptic_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
vr_haptic_msgs/msg/: HandGesture.msg  HapticReadings.msg  ManoLandmarks.msg  Taxel.msg
