<?xml version="1.0"?>
<package format="3">
  <name>vr_haptic_msgs</name>
  <version>1.0.0</version>
  <description>ROS messages for VR hands use.</description>
  <maintainer email="mwilder@ethz.ch">Maximum Wilder-Smith</maintainer>
  <author email="mwilder@ethz.ch">Maximum Wilder-Smith</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
